--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "core-js": "^2.6.5",
     "highcharts": "^7.2.0",
     "highcharts-vue": "^1.3.5",
+    "leaflet": "^1.5.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
