--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "highcharts": "^7.2.0",
     "highcharts-vue": "^1.3.5",
     "leaflet": "^1.5.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue2-leaflet": "^2.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
